Ultilizando background-attachment: scroll, fixed

--- a/Exercicios/ex022/fubdo006.html
+++ b/Exercicios/ex022/fubdo006.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover ;
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             margin: auto;
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             border: 1px solid darkblue;
             border-radius: 15px;
@@ -26,7 +23,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, earum, possimus voluptates in sapiente suscipit reprehenderit assumenda non eveniet vero repudiandae dolores consequuntur blanditiis accusantium magnam asperiores nam, quibusdam nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusantium repellat, commodi ab possimus voluptatibus, aliquid, nobis laudantium deleniti nihil sed perferendis dolor magni enim reprehenderit quis in quos voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut provident vero soluta architecto, aliquam dolorem consequuntur atque dolores sed facilis facere possimus placeat delectus commodi excepturi quis non impedit illo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita dicta iusto vero distinctio, totam, aut laudantium non cum saepe, necessitatibus quis quam velit fuga tempora ducimus. Dicta aspernatur nobis dolore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum nobis quia aperiam harum vitae sequi aspernatur neque temporibus consequatur, pariatur animi illo facere reiciendis aliquam aut asperiores, a debitis odio.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, earum, possimus voluptates in sapiente suscipit reprehenderit assumenda non eveniet vero repudiandae dolores consequuntur blanditiis accusantium magnam asperiores nam, quibusdam nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusantium repellat, commodi ab possimus voluptatibus, aliquid, nobis laudantium deleniti nihil sed perferendis dolor magni enim reprehenderit quis in quos voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut provident vero soluta architecto, aliquam dolorem consequuntur atque dolores sed facilis facere possimus placeat delectus commodi excepturi quis non impedit illo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita dicta iusto vero distinctio, totam, aut laudantium non cum saepe, necessitatibus quis quam velit fuga tempora ducimus. Dicta aspernatur nobis dolore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum nobis quia aperiam harum vitae sequi aspernatur neque temporibus consequatur, pariatur animi illo facere reiciendis aliquam aut asperiores, a debitis odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati assumenda, voluptatibus debitis molestias ipsum nesciunt id molestiae. Quisquam velit at neque veniam, facilis itaque harum impedit laudantium, perferendis voluptate excepturi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque dolor nihil veritatis harum deleniti esse omnis eos illum et aliquid perferendis, sint, dolores quasi nam eveniet praesentium mollitia odit velit.</p>
     </main>
 </body>
 </html>
