--- a/Exercicios/ex023/tabela001.html
+++ b/Exercicios/ex023/tabela001.html
@@ -16,6 +16,7 @@
         table{
             margin: 0 auto;
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
             border: 1px solid black;
         }
@@ -31,6 +32,12 @@
         td{
             padding: 8px;
             border: 1px solid black;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        td.numero{
+            text-align: right;
         }
 
     </style>
@@ -51,12 +58,12 @@
         </tr>
         
         <tr class="linha">
-            <td>A3</td>
+            <td class="numero">A3</td>
             <td>B3</td>
             <td>C3</td>
         </tr>
 
-        <tr  class="dado">
+        <tr class="dado">
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
