--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -19,10 +19,22 @@
             border: 1px solid black;
         }
 
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot{
-            background-color: gray;
+            background-color: black;
             color: white;
         }
+
+        tbody > tr:nth-child(even){
+            background-color: lightgray;
+        }
+
         td.num{
             text-align: right;
         }
@@ -32,7 +44,7 @@
     <h1>Uso de tabelas grandes</h1>   
     <!---
         ANATOMIA PARA TABELAS GRANDES
-
+        CAPTION = legenda da tabela
         TABLE
             THEAD
                 TR,TD,TH,
@@ -45,10 +57,11 @@
     --> 
 
     <table>
+        <caption>População das Unidades federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
 
@@ -191,7 +204,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de habitantes</th>
+                <th scope="row">Total de habitantes</th>
                 <td class="num"><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
