--- a/Exercicios/ex024/iframe001.html
+++ b/Exercicios/ex024/iframe001.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+        }
+    </style>
 </head>
 <body>
+    <!--Tamanho padrão 300X150-->
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site do <iframe src="https://cursoemvideo.com" frameborder="0"></iframe> para aprender a programar</p>
+    <p>Acessando o site do 
+        <iframe src="https://cursoemvideo.com" frameborder="0" height="500" scolling="no">
+            <a href="https://cursoemvideo.com" target="_blank">CursoemVideo</a>
+        </iframe> 
+        para aprender a programar
+    </p>
+    <p>
+        O reposítorio do Guanabara
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" width="500" height="500">
+            <a href="https://gustavoguanabara.github.io" target="_blank">Reposítorio do CursoemVideo</a>
+        </iframe>
+        também é legal
+    </p>
 </body>
 </html>
