--- a/Exercicios/ex024/iframe002.html
+++ b/Exercicios/ex024/iframe002.html
@@ -18,7 +18,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ducimus vel quo, eum assumenda enim dolorum optio minima nihil dolores in beatae, inventore, voluptatum eveniet ad culpa! Similique, aut ab? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam culpa nemo quos rerum, assumenda asperiores rem perferendis eum doloremque, libero repellat! Eveniet deleniti, corrupti hic nemo consequuntur quibusdam ex sint!</p>
 
-    <iframe src="../ex023/tabela006.html" frameborder="1" height="500" width="500"></iframe>
+    <iframe src="pag_extras/pag001.html" frameborder="1" height="500" width="500">
+        <p>Infelizmente seu navegador não é compatível com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ducimus vel quo, eum assumenda enim dolorum optio minima nihil dolores in beatae, inventore, voluptatum eveniet ad culpa! Similique, aut ab? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam culpa nemo quos rerum, assumenda asperiores rem perferendis eum doloremque, libero repellat! Eveniet deleniti, corrupti hic nemo consequuntur quibusdam ex sint!</p>
 </body>
