--- a/Exercicios/ex024/pag_extras/pag001.html
+++ b/Exercicios/ex024/pag_extras/pag001.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: lightgray;
+            background-color: green;
             color: white;
         }
         h1 {
@@ -17,6 +17,6 @@
     </style>
 </head>
 <body>
-    <h1>Isso é um teste</h1>    
+    <h1>Miguel o Fenomeno</h1>    
 </body>
 </html>
