ultilizando o novo atributo (srcdoc="")"

--- a/Exercicios/ex024/iframe003.html
+++ b/Exercicios/ex024/iframe003.html
@@ -27,7 +27,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi molestiae voluptatibus itaque perspiciatis quibusdam vitae enim tenetur repudiandae sunt provident harum ullam quam aut minus non nostrum, obcaecati laudantium rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni perferendis beatae neque delectus doloremque! Quaerat temporibus velit, nostrum consequatur tempore ab beatae eius corporis, ducimus nulla ut! Enim, dolorem adipisci.</p>
 
-    <iframe src="" frameborder="1" name="frame" id="tela">
+    <iframe srcdoc="<h1>Escolha alguma das opções acima</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo optio natus iure totam aliquam. Rerum, alias expedita iusto, porro quo exercitationem harum dolore voluptatum nulla eveniet necessitatibus aspernatur dignissimos sint.</p>" frameborder="1" name="frame" id="tela">
         <p>Seu navegador não suporta iframes. Por favor, utilize um outro navegador para visualizar o conteúdo.</p>
     </iframe>
 
