--- a/ex025/form001.html
+++ b/ex025/form001.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Meu primeiro formúlario</h1>
-    <form action="cadastro.js" autocomplete="on">
+    <form action="cadastro.js" method="post" autocomplete="on">
         <p>
             <label for="inome">Nome: </label>
             <input type="text" name="nome" id="inome">
